# glia

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
bindings/C_C++/: HowToRun.txt  main.c
bindings/C_C++/include/gl/: gldk.h
gldk/: Cargo.toml  build.rs
gldk-dll/: Cargo.toml
gldk-dll/c_src/: HowToRun.txt  main.c
gldk-dll/include/gl/: gldk.h
gldk-dll/src/: lib.rs
gldk/examples/: sample.rs  triangle.rs
gldk/src/: error.rs  lib.rs  window.rs
gldk/src/platform_impl/window/: linux.rs  mod.rs  windows.rs
gldk/src/sys/: mod.rs  windows.rs
