[package]
name = "gldk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5.1"
gl = "0.14.0"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL"
]

[target."cfg(unix)".dependencies.safex]
git = "https://github.com/Lattexshz/SafeX"
features = [
    "xlib",
    "glx"
]

[build-dependencies]
gl_generator = "0.14"