[package]
name = "gldk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5.1"
gl = "0.14.0"
gwl = { version = "0.1.0", git = "https://github.com/Lattexshz/GWL"}

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "wingdi",
    "libloaderapi",
    "minwindef",
    "windef",
    "dwmapi",
    "gl-gl"
]

[target."cfg(unix)".dependencies.safex]
version = "0.0.5"
features = [
    "xlib",
    "glx"
]

[build-dependencies]
gl_generator = "0.14"